<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/ic_sale"
            android:title="@string/sell"
            android:id="@+id/nav_sell"/>
        <item
            android:icon="@drawable/ic_menu_insert"
            android:title="@string/menu"
            android:id="@+id/nav_menu"/>
        <item
            android:icon="@drawable/ic_chart"
            android:title="@string/report"
            android:id="@+id/nav_report"/>
    </group>

    <item android:title="@string/setting">
        <menu>
            <item
                android:icon="@drawable/ic_sync"
                android:title="@string/sync_data" />
            <item
                android:icon="@drawable/ic_settings_gray"
                android:title="@string/setting" />
            <item
                android:icon="@drawable/ic_link_account"
                android:title="@string/link_account" />
        </menu>
    </item>

    <item android:title="@string/help">
        <menu>
            <item
                android:icon="@drawable/ic_notifications"
                android:title="@string/notification" />
            <item
                android:icon="@drawable/ic_share"
                android:title="@string/recommend_to_friend" />
            <item
                android:icon="@drawable/ic_rate"
                android:title="@string/rate_app" />
            <item
                android:icon="@drawable/ic_feedback"
                android:title="@string/feedback_to_developer" />
            <item
                android:icon="@drawable/ic_info"
                android:title="@string/app_infomation" />
        </menu>
    </item>

    <item android:title="@string/account">
        <menu>
            <item
                android:icon="@drawable/ic_change_password"
                android:title="@string/set_password" />
            <item
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />
        </menu>
    </item>


</menu>