<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sell.menu.update.UpdateFoodInMenuActivity"
    android:orientation="vertical"
    android:background="@color/colorBackground">
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        android:padding="@dimen/nav_margin_item"
        android:background="@color/colorPrimaryDark"
        android:id="@+id/layout_update_food_bar">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_back"
            android:id="@+id/ibtn_back"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/update_food"
            android:textSize="@dimen/title_text_size"
            android:textColor="@color/colorWhite" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stored"
            android:textColor="@color/colorWhite"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textSize="@dimen/food_text_size"
            android:id="@+id/tv_stored_bar"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_below="@id/layout_update_food_bar"
        android:padding="@dimen/padding_small"
        android:background="@color/colorWhite"
        android:id="@+id/layout_name_food"
        android:layout_marginBottom="@dimen/border_size"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_food_star"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_food_name"
            android:background="@color/colorWhite"
            android:gravity="right"
            android:maxLines="1"
            android:lines="1"
            android:inputType="text"
            android:layout_marginRight="@dimen/icon_small"
            android:id="@+id/edt_food_name"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_below="@id/layout_name_food"
        android:padding="@dimen/padding_small"
        android:background="@color/colorWhite"
        android:gravity="center"
        android:id="@+id/layout_price_food"
        android:layout_marginBottom="@dimen/border_size">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_food"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/zero"
            android:background="@color/colorWhite"
            android:gravity="right"
            android:maxLines="1"
            android:ellipsize="end"
            android:id="@+id/edt_food_price"
            android:inputType="number"/>
        <ImageView
            android:layout_width="@dimen/icon_small"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/ic_right_gray"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_below="@id/layout_price_food"
        android:padding="@dimen/padding_small"
        android:background="@color/colorWhite"
        android:gravity="center"
        android:id="@+id/layout_unit"
        android:layout_marginBottom="@dimen/border_size">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unit_star"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/enter_unit"
            android:background="@color/colorWhite"
            android:gravity="right"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/food_text_size"
            android:id="@+id/tv_unit_name"/>
        <ImageView
            android:layout_width="@dimen/icon_small"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/ic_right_gray"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layout_unit"
        android:background="@color/colorWhite"
        android:padding="@dimen/padding_small"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="@dimen/tv_large"
                android:layout_height="wrap_content"
                android:text="@string/colorway"/>
            <FrameLayout
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/frame_circle_palette">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_palette"
                    android:id="@+id/iv_choose_color"/>
            </FrameLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/symbol"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"/>
            <FrameLayout
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/frame_circle_symbol">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_default"
                    android:id="@+id/iv_choose_symbol"/>
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/margin_small">
            <TextView
                android:layout_width="@dimen/tv_large"
                android:layout_height="wrap_content"
                android:text="@string/state"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cb_state"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stop_sell"
                android:textColor="@color/colorBlack"/>

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_bar_size"
        android:layout_marginBottom="@dimen/margin_half_small"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_small"
        android:layout_alignParentBottom="true">
        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            app:cardBackgroundColor="@color/coloRed"
            app:cardCornerRadius="@dimen/corner_radius"
            android:id="@+id/frame_delete_food">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/colorWhite"
                android:text="@string/delete"
                android:gravity="center"
                android:textSize="@dimen/title_text_size"
                android:id="@+id/tv_delete_food"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            app:cardBackgroundColor="@color/colorPrimaryDark"
            app:cardCornerRadius="@dimen/corner_radius"
            android:layout_toRightOf="@id/frame_delete_food"
            android:layout_marginLeft="@dimen/margin_small">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/colorWhite"
                android:text="@string/stored_upper"
                android:gravity="center"
                android:textSize="@dimen/title_text_size"
                android:id="@+id/tv_stored_food"/>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</RelativeLayout>