<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sell.menu.insert.InsertFoodToMenuActivity"
    android:orientation="vertical"
    android:background="@color/colorBackground">

    <include
        android:id="@+id/layout_insert_food_bar"
        layout="@layout/insert_food_bar"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/frame_medium"
        android:orientation="horizontal"
        android:layout_below="@id/layout_insert_food_bar"
        android:padding="@dimen/padding_small"
        android:background="@color/colorWhite"
        android:id="@+id/layout_name_food"
        android:layout_marginBottom="@dimen/border_size"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_food_star"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_height="wrap_content"
            android:hint="@string/enter_food_name"
            android:background="@color/colorWhite"
            android:gravity="right"
            android:maxLines="1"
            android:lines="1"
            android:inputType="text"
            android:layout_marginRight="@dimen/icon_small"
            android:id="@+id/edt_food_name"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/frame_medium"
        android:orientation="horizontal"
        android:layout_below="@id/layout_name_food"
        android:padding="@dimen/padding_small"
        android:background="@color/colorWhite"
        android:gravity="center"
        android:id="@+id/layout_price_food"
        android:layout_marginBottom="@dimen/border_size">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_food"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:background="@color/colorWhite"
            android:gravity="right|center_vertical"
            android:maxLines="1"
            android:ellipsize="end"
            android:inputType="none"
            android:id="@+id/edt_food_price"
            android:drawableRight="@drawable/ic_right_gray"
            android:hint="@string/enter_food_price"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/frame_medium"
        android:orientation="horizontal"
        android:layout_below="@id/layout_price_food"
        android:padding="@dimen/padding_small"
        android:background="@color/colorWhite"
        android:gravity="center"
        android:id="@+id/layout_unit"
        android:layout_marginBottom="@dimen/border_size">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unit_star"/>
        <TextView
            android:id="@+id/tv_unit_name"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:gravity="right|center_vertical"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/food_text_size"
            android:drawableRight="@drawable/ic_right_gray"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layout_unit"
        android:background="@color/colorWhite"
        android:padding="@dimen/padding_small">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="@dimen/tv_large"
                android:layout_height="wrap_content"
                android:text="@string/colorway"/>
            <FrameLayout
                android:layout_width="@dimen/frame_medium"
                android:layout_height="@dimen/frame_medium"
                android:id="@+id/frame_circle_palette">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_palette"
                    android:id="@+id/iv_choose_color"/>
            </FrameLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/symbol"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"/>
            <FrameLayout
                android:layout_width="@dimen/frame_medium"
                android:layout_height="@dimen/frame_medium"
                android:id="@+id/frame_circle_symbol">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/iv_choose_symbol"/>
            </FrameLayout>
        </LinearLayout>

    </LinearLayout>


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_bar_size"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        android:layout_marginBottom="@dimen/margin_half_small"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_small"
        app:cardCornerRadius="@dimen/corner_radius"
        android:layout_alignParentBottom="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/colorWhite"
            android:text="@string/stored_upper"
            android:gravity="center"
            android:textSize="@dimen/title_text_size"
            android:id="@+id/btn_stored"/>
    </android.support.v7.widget.CardView>

</RelativeLayout>