<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:padding="@dimen/padding_small">
        <TextView
            android:id="@+id/tv_title_unit_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_unit"
            android:textColor="@color/colorWhite"
            android:layout_toLeftOf="@id/iv_delete_dialog"
            android:layout_alignParentLeft="true"/>
        <ImageView
            android:layout_width="@dimen/icon_xsmall"
            android:layout_height="@dimen/icon_xsmall"
            android:src="@drawable/ic_close_white"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:id="@+id/iv_delete_dialog"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:maxLines="1"
            android:lines="1"
            android:inputType="text"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_large"
            android:layout_marginRight="@dimen/margin_small"
            android:hint="@string/enter_unit"
            android:textSize="@dimen/food_text_size"
            android:id="@+id/edt_result_unit"/>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLightGray"
        android:padding="@dimen/margin_half_small">
        <android.support.v7.widget.CardView
            android:layout_width="80dp"
            android:layout_height="40dp"
            app:cardBackgroundColor="@color/colorPrimaryDark"
            app:cardCornerRadius="@dimen/corner_radius"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/margin_half_small"
            android:id="@+id/frame_stored">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/stored_upper"
                android:textColor="@color/colorWhite"
                android:id="@+id/tv_stored_dialog"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="80dp"
            android:layout_height="40dp"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="@dimen/corner_radius"
            android:layout_marginRight="@dimen/margin_small"
            android:layout_toLeftOf="@id/frame_stored">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/cancel_upper"
                android:textColor="@color/coloRed"
                android:id="@+id/tv_cancel_dialog"/>
        </android.support.v7.widget.CardView>
    </RelativeLayout>

</LinearLayout>